
22 Oct 07 - 1.40

the code now requires a C++ compiler

screenshot filename is YYYY_MM_DD-HH_MM_SS-TTT
this means they'll never collide *; moviemakers won't run out;
and the engine DOESN'T STAT 10,000 FILES EVERY FRAME
(* except at 2am on an autumn night if you're amazingly unlucky :P)

demo filename is YYYY_MM_DD-HH_MM_SS

fixed demos to be MAX_OSPATH instead of MAX_QPATH, ie 256 chars now

removed support for BMP and PCX

removed fs_cdpath, fs_copyfiles, touchfile, fs_restrict

removed support for IPX

removed in_logitechbug

updated cpu detection

added TTF support

fixed a bunch of stuff in ScanAndLoadShaderFiles, but it's still crap

fixed the patch collision epsilon bugs of 1.34

reverted to id's tab-completion since ioq3's is so hated
i've semi-merged them atm, will fix up when i get time

interpreted vm is never used on platforms that support compiled vm

clampmaps and nomip images use GL_CLAMP_TO_EDGE rather than GL_CLAMP

disabled curl until it's brought up to standard

merged platform-specific *_net.* into qcommon/net_ip.cpp, <3 timbo  :)


12 Sep 07 - released as 1.34, since it was about time we did  :P

increased default MAX_POLYS to 8K and MAX_POLYVERTS to 32K


Aug 07

fixed a bug in the skybox code that tried to use a 0-length CVA
which makes recent nvidia drivers go into spaz mode 

changed r_ext_multisample default to 0 to stop ix nagging  :P


July 07

added support for curl

improved some network stuff (buffer sizes and TOS)

added support for mouse5-mouse8


1 May 07

remove broken useless cl_freezeDemo and make demo pausing work
just use timescale 0


27 Apr 07

ripped out all support for legacy substandard hw/drivers (ie Voodoo etc)
and r_maskMinidriver

uncorrected mode 8 back to 1280x1024



18 Jul 06

update various cvar defaults
r_stencilbits: 0
r_picmip: 0
r_roundImagesDown: 0
r_simpleMipMaps: 0
s_useOpenAL: 0

default fs_game to cpma


30 Jun 06 - initial build from ioq3 svn v810

mode 8 corrected to 1280x960

undefined USE_OPENAL
