@@ -405,7 +405,7 @@ static void CL_MouseMove( usercmd_t *cmd )
 	cl.mouseDy[cl.mouseIndex] = 0;
 
 	rate = sqrt( mx * mx + my * my ) / (float)frame_msec;
-	accelSensitivity = cl_sensitivity->value + rate * cl_mouseAccel->value;
+	accelSensitivity = cl_sensitivity->value + rate * m_accel->value;
 
 	// scale by FOV
 	accelSensitivity *= cl.cgameSensitivity;
